Web Inspector: Breakpoint icons should not get pushed off of debugger sidebar due to long resource names https://bugs.webkit.org/show_bug.cgi?id=142714
Reviewed by Timothy Hatcher.

Modify the styles for content and group containers inside the debugger sidebar panel's detail sections
such that the rules "display: table" and "display: table-row-group" no longer apply. This will make
the file names which use the rule "text-overflow: ellipsis" truncate as expected.

* UserInterface/Views/DebuggerSidebarPanel.css:
(.sidebar > .panel.navigation.debugger .details-section > .content):
(.sidebar > .panel.navigation.debugger .details-section.collapsed > .content):
(.sidebar > .panel.navigation.debugger .details-section > .content > .group):
(.sidebar > .panel.navigation.debugger .details-section.scripts):
(.sidebar > .panel.navigation.debugger .details-section.scripts .header):
(.sidebar > .panel.navigation.debugger .details-section.scripts.collapsed > .content):


Canonical link: https://commits.webkit.org/161877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182939 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DebuggerSidebarPanel.css
@@ -42,23 +42,36 @@ body.mac-platform.legacy .sidebar > .panel.navigation.debugger > .content {
     font-size: 11px;
 }
 
-.sidebar > .panel.navigation.debugger .details-section.scripts {
-    border-bottom: none;
+.sidebar > .panel.navigation.debugger .details-section > .content {
+    display: block;
 }
 
-.sidebar > .panel.navigation.debugger .details-section.scripts .header {
+.sidebar > .panel.navigation.debugger .details-section.collapsed > .content {
     display: none;
 }
 
-.sidebar > .panel.navigation.debugger .details-section.scripts.collapsed > .content {
+
+.sidebar > .panel.navigation.debugger .details-section > .content > .group {
     display: block;
+}
+
+.sidebar > .panel.navigation.debugger .details-section.scripts {
+    border-bottom: none;
 }
 
 .sidebar > .panel.navigation.debugger.paused .details-section.scripts {
     border-bottom: 1px solid rgb(179, 179, 179);
 }
 
+.sidebar > .panel.navigation.debugger .details-section.scripts .header {
+    display: none;
+}
+
 .sidebar > .panel.navigation.debugger.paused .details-section.scripts .header {
+    display: block;
+}
+
+.sidebar > .panel.navigation.debugger .details-section.scripts.collapsed > .content {
     display: block;
 }
 
